<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8FAFC"
    android:orientation="vertical">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#0EA5E9"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:baselineAligned="false">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back"
            app:tint="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_appointment"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Doctor Details -->
            <TextView
                android:id="@+id/tvDoctorNameHdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#111827"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSpecHdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#6B7280"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvFeeHdr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="#0EA5E9"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/select_date"
                android:textColor="#111827"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:firstDayOfWeek="2" />


            <TextView
                android:id="@+id/tvSelecteDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="First select date ... ☝️"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvSelectedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/no_date_selected"
                android:textColor="#6B7280"
                android:textSize="13sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/select_time_slot"
                android:textColor="#111827"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Time slots grid -->
            <GridLayout
                android:id="@+id/slotGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:columnCount="4"
                android:padding="8dp"
                android:useDefaultMargins="true"
                android:alignmentMode="alignBounds"
                android:columnOrderPreserved="false"
            />

            <TextView
                android:id="@+id/tvSelectedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_slot_selected"
                android:textColor="#6B7280"
                android:textSize="13sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnConfirmBooking"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="12dp"
        android:backgroundTint="#0EA5E9"
        android:text="@string/confirm_booking"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>
